--- a/estilos/style.css
+++ b/estilos/style.css
@@ -18,3 +18,23 @@ Telas Grandes: 1201px ou mais
 
 */
 
+*{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 0px;
+    margin: 0px;
+}
+
+html, body{
+
+    background-color: #7292F2;
+
+}
+
+section#login{
+
+    background-color: white;
+}
+
+div#imagem{
+    background-color: lightgray;
+}
