--- a/estilos/style.css
+++ b/estilos/style.css
@@ -10,16 +10,6 @@
     
 */
 
-/* Typical Devices Breakpoints
--------------------------------
-Pequenas Telas: até 600px
-Celular: 601px até 768 px
-Tablet: 769px até 1024px
-Desktop: 1025px até 1200px
-Telas Grandes: 1201px ou mais 
-
-*/
-
 *{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding: 0px;
@@ -48,6 +38,9 @@ section#login{
     transform: translate(-50%,-50%);
     border-radius: 15px;
     overflow: hidden;
+
+    transition: width 1s height 1s;
+
 }
 
 div#imagem{
@@ -55,11 +48,13 @@ div#imagem{
     background-repeat: no-repeat;
     background-size: cover;
     height: 220px;
+    display: block;
 }
 
 div#formulario > h1{
     text-align: center;
     padding-top: 5px;
+    display: block;
     
 }
 
