--- a/estilos/style.css
+++ b/estilos/style.css
@@ -3,7 +3,7 @@
 /*PALETA DE CORES
 
     Azul Marinho: #1D1A73
-    Azul Escuro: #3E2EA6
+    Azul Escuro: 9
     Azul Claro: #4A88D9
     Azul BB: #72F2F2
     Rosa roxeado: #a113a3 
@@ -39,7 +39,8 @@ section#login{
     border-radius: 15px;
     overflow: hidden;
 
-    transition: width 1s height 1s;
+    transition: width .8s, height .8s;
+    transition-timing-function: ease;
 
 }
 
